# agent-harness

./: .gitignore  AGENTS.md  README.md  design-qa.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.worker.json  vite.config.ts  wrangler.toml
.github/workflows/: package.yml
.trae/documents/: multi-turn-openrouter.md
src/: App.tsx  chat-store.ts  client-config.ts  codex-client.ts  index.css  main.tsx  memory-data.ts  memory-learning-record.ts  memory-store.ts  openrouter-client.ts  recommendation-stats.ts  settings-config.ts  sidebar-data.ts  sidebar-layout.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  codex.rs  commands.rs  config.rs  lib.rs  main.rs  memory.rs  metadata.rs  openrouter.rs  weread.rs
src/agents/: openrouter-book-agent.ts
src/chat/: text-content.ts
src/components/: ChatWorkspace.tsx  Thread.tsx
src/config/: client-config.ts  settings-config.ts
src/layout/: resizable-panels.ts  sidebar-layout.ts
src/lib/: gsap.ts
tests/: app-updates.test.ts  book-agent.test.ts  book-cards.test.ts  brand.test.ts  chat-store-snapshots.test.ts  client-config.test.ts  codex-client.test.ts  memory-data.test.ts  memory-learning-record.test.ts  openrouter-client.test.ts  reading-workspace.test.ts  recommendation-stats.test.ts  resizable-panels.test.ts  settings-config.test.ts  sidebar-data.test.ts  sidebar-layout.test.ts  source-structure.test.ts  text-content.test.ts  weread-data.test.ts
worker/: index.ts  llm.ts  prompts.ts  weread.ts
(+25 files in other folders)
